--- a/raymarching_tdf2017.html
+++ b/raymarching_tdf2017.html
@@ -563,6 +563,7 @@ void cameraControl(inout Camera camera) {
 	float b6 = easeInOutCubic(saturate(t6 - 3.0));
 	float b7 = easeInOutCubic(saturate(t7));
 
+	// camera target
 	camera.target = vec3(0.0);
 	camera.target.y = 0.7 * clamp(META_SCENE_END_TIME - lTime, -4.0, 40.0);
 	camera.target.y = mix(camera.target.y, 1.0 + t2 * 0.3, b2);
@@ -570,7 +571,7 @@ void cameraControl(inout Camera camera) {
 	camera.target.x = mix(camera.target.x, -0.7, b6);
 	camera.target.x = mix(camera.target.x, 0.0, b7);
 
-	// position
+	// camera position
 	vec3 p0 = camera.target + vec3(0.0, 0.0, -5.0);
 	vec3 p1 = vec3(1.0, 0.3 * abs(t1 - 0.5), 1.0);
 	vec3 p2 = vec3(3.5 + t2 * 0.8, 1.0 + t2 * 0.1, 0.0);
