一瞬画面が青くなるバグがいい感じになった

--- a/raymarching_tdf2017.html
+++ b/raymarching_tdf2017.html
@@ -347,7 +347,7 @@ float dUfo(inout vec3 p) {
 	float d = dWing(p);
 	float t3 = lTime - META_SCENE_END_TIME - 5.0;
 	if (t3 < 0.0) {
-		d -= mix(0.08, 0.0, saturate((t3 + 10.0) * 0.1)) * fbm(10.0 * p.xz + 5.0 * p.y);
+		d -= 0.08 * fbm(10.0 * p.xz + 5.0 * p.y);
 	}
 	return d;
 	//return dWing(p) - 0.06 * step(lTime - 5.0, META_SCENE_END_TIME) * fbm(10.0 * p.xz + p.y);
@@ -395,7 +395,7 @@ void setMaterialAndUv(inout Intersection intersection, vec3 p) {
 		intersection.reflection = rate;
 	}
 
-	intersection.reflection = mix(intersection.reflection, 0.7, saturate((lTime - META_SCENE_END_TIME) * 0.1));
+	intersection.reflection = mix(intersection.reflection, 0.7, saturate((lTime - META_SCENE_END_TIME) * 0.07));
 
 	//if ( false && lTime <= META_SCENE_END_TIME ) {
 	//	intersection.material = MIRROR_MATERIAL;
