--- a/raymarching_tdf2017.html
+++ b/raymarching_tdf2017.html
@@ -172,8 +172,8 @@ float easeInCubic( float t ) {
 	return t * t * t;
 }
 
-float easeInOutCubic( float t ) {
-	return t < 0.5 ? 4.0 * t * t * t : ( t - 1.0 ) * ( 2.0 * t - 2.0 ) * ( 2.0 * t - 2.0 ) + 1.0;
+float easeInOutCubic(float t) {
+	return t < 0.5 ? 4.0 * t * t * t : (t - 1.0) * (2.0 * t - 2.0) * (2.0 * t - 2.0) + 1.0;
 }
 
 float gauss(float x) {
@@ -214,25 +214,7 @@ float smin(float d1, float d2, float k) {
 	return -log(h) / k;
 }
 
-// functions
-
-// https://www.shadertoy.com/view/MdVGRc
-float dMbox( vec3 p ) {
-  const float scale = 2.7;
-  const int n = 12;
-  vec4 q0 = vec4 (p, 1.);
-  vec4 q = q0;
-
-  for ( int i = 0; i < n; i++ ) {
-
-    q.xyz = clamp( q.xyz, -1.0, 1.0 ) * 2.0 - q.xyz;
-    q = q * scale / clamp( dot( q.xyz, q.xyz ), 0.5, 1.0 ) + q0;
-
-  }
-
-  return length( q.xyz ) / abs( q.w );
-}
-
+// Distance Functions
 float sdBox( vec3 p, vec3 b ) {
   vec3 d = abs(p) - b;
   return min(max(d.x,max(d.y,d.z)),0.0) + length(max(d,0.0));
@@ -308,8 +290,8 @@ float hWave(vec2 p, float t) {
 	float b = 6.0;
 
 	for(float i = 0.0; i < 3.0; i++) {
-		float f = pow( 2.0, i );
-		h += 1.0 / f * (sin( f * a * p.x + b * t) + sin(f * a * p.y + b * t));
+		float f = pow(2.0, i);
+		h += 1.0 / f * (sin(f * a * p.x + b * t) + sin(f * a * p.y + b * t));
 	}
 
 	return h;
@@ -354,7 +336,7 @@ float dUfo(inout vec3 p) {
 	//return dWing(p) - 0.06 * step(lTime - 5.0, META_SCENE_END_TIME) * fbm(10.0 * p.xz + p.y);
 }
 
-float dScene( vec3 p ) {
+float dScene(vec3 p) {
 	if (lTime < META_SCENE_END_TIME + 12.0) {
 		float d = dMeta(p);
 		d = smin(d, dUfo(p), clamp((lTime - META_SCENE_END_TIME), 1.0, 15.0));
@@ -369,9 +351,9 @@ float dScene( vec3 p ) {
 
 
 // color functions
-vec3 hsv2rgb( vec3 c ) {
+vec3 hsv2rgb(vec3 c) {
 	vec4 K = vec4(1.0, 2.0 / 3.0, 1.0 / 3.0, 3.0);
-	vec3 p = abs(fract(c.xxx + K.xyz ) * 6.0 - K.www);
+	vec3 p = abs(fract(c.xxx + K.xyz) * 6.0 - K.www);
 	return c.z * mix(K.xxx, saturate(p - K.xxx), c.y);
 }
 
@@ -382,7 +364,7 @@ vec3 hsv2rgb( vec3 c ) {
 //			e.yxy * dScene( p + e.yxy ) + e.xxx * dScene( p + e.xxx ) );
 //}
 
-#define calcNormal(p, dFunc) normalize(vec2(EPS_N, -EPS_N).xyy * dFunc( p + vec2(EPS_N, -EPS_N).xyy ) + vec2(EPS_N, -EPS_N).yyx * dFunc( p + vec2(EPS_N, -EPS_N).yyx ) + vec2(EPS_N, -EPS_N).yxy * dFunc( p + vec2(EPS_N, -EPS_N).yxy ) + vec2(EPS_N, -EPS_N).xxx * dFunc( p + vec2(EPS_N, -EPS_N).xxx ) )
+#define calcNormal(p, dFunc) normalize(vec2(EPS_N, -EPS_N).xyy * dFunc(p + vec2(EPS_N, -EPS_N).xyy) + vec2(EPS_N, -EPS_N).yyx * dFunc(p + vec2(EPS_N, -EPS_N).yyx ) + vec2(EPS_N, -EPS_N).yxy * dFunc(p + vec2(EPS_N, -EPS_N).yxy) + vec2(EPS_N, -EPS_N).xxx * dFunc(p + vec2(EPS_N, -EPS_N).xxx))
 
 float calcRate(float a, float b) {
 	return a / (a + b);
@@ -487,9 +469,9 @@ float screenSpaceSnow(vec2 uv) {
 	return acc;
 }
 
-void calcRadiance( inout Intersection intersection, inout Ray ray, int bounce ) {
+void calcRadiance(inout Intersection intersection, inout Ray ray, int bounce) {
 	intersection.hit = false;
-	intersectScene( intersection, ray );
+	intersectScene(intersection, ray);
 
 	if ( intersection.hit ) {
 		float diffuse = clamp(dot(lightDir, intersection.normal), 0.2, 1.0) * 0.5 + 0.5;
@@ -558,7 +540,6 @@ void cameraControl(inout Camera camera) {
 	camera.target.y = mix(camera.target.y, 0.0, b3);
 	camera.target.y = mix(camera.target.y, 0.0 + 0.5 * t4, b4);
 
-	//camera.target.y = mix(camera.target.y, 0.0, t5 - 1.0);
 	camera.target.y = mix(camera.target.y, 0.0, b5);
 	camera.target.x = mix(camera.target.x, -0.7, b6);
 	camera.target.x = mix(camera.target.x, 0.0, b7);
