--- a/raymarching_tdf2017.html
+++ b/raymarching_tdf2017.html
@@ -229,7 +229,7 @@ float dBar( vec2 p, float interval, float width) {
 
 
 #define META_SCENE_END_TIME (32.0)
-#define UFO_SCENE_END_TIME (122.0)
+#define UFO_SCENE_END_TIME (117.0)
 #define SNOW_SCENE_END_TIME (182.0)
 
 float dFract(inout vec3 p) {
@@ -246,7 +246,7 @@ float dFract(inout vec3 p) {
 }
 
 float dTree(vec3 p) {
-	float scale = 0.6 * saturate(1.5 * sin(0.05 * (lTime - UFO_SCENE_END_TIME - 5.0)));
+	float scale = 0.6 * saturate(1.5 * sin(0.05 * (lTime - UFO_SCENE_END_TIME - 2.0)));
 	float width = mix(0.3 * scale, 0.0, saturate(p.y));
 	vec3 size = vec3(width, 1.0, width);
 	float d = sdBox(p, size);
@@ -342,7 +342,7 @@ float dUfo(inout vec3 p) {
 
 float dScene(vec3 p) {
 	//if (lTime < META_SCENE_END_TIME + 12.0) {
-	if (lTime < UFO_SCENE_END_TIME) {
+	if (lTime < UFO_SCENE_END_TIME - 2.0) {
 		float d = dMeta(p);
 		d = smin(d, dUfo(p), clamp((lTime - META_SCENE_END_TIME), 1.0, 15.0));
 		return d;
@@ -396,7 +396,7 @@ void setMaterialAndUv(inout Intersection intersection, vec3 p) {
 	//}
 }
 
-void intersectScene( inout Intersection intersection, inout Ray ray ) {
+void intersectScene(inout Intersection intersection, inout Ray ray ) {
 	float d;
 	intersection.distance = 0.0;
 	vec3 p = ray.origin;
@@ -509,7 +509,7 @@ void calcRadiance(inout Intersection intersection, inout Ray ray, int bounce) {
 	}
 
 	// Whiteout
-	intersection.color = mix(intersection.color, vec3(1.0), gauss((lTime - UFO_SCENE_END_TIME) * 1.0));
+	//intersection.color = mix(intersection.color, vec3(1.0), gauss((lTime - UFO_SCENE_END_TIME) * 1.0));
 	intersection.color = mix(intersection.color, vec3(1.0), gauss((lTime - SNOW_SCENE_END_TIME) * 0.5));
 }
 
@@ -521,8 +521,8 @@ void cameraControl(inout Camera camera) {
 	float t4 = t3 - 20.0;
 
 	float t5 = lTime - UFO_SCENE_END_TIME;
-	float t6 = t5 - 6.0;
-	float t7 = t6 - 12.0;
+	float t6 = t5 - 7.0;
+	float t7 = t6 - 10.0;
 
 	// blend
 
@@ -533,8 +533,8 @@ void cameraControl(inout Camera camera) {
 	float b4 = easeInOutCubic(saturate(t4 * 0.2));
 
 	// snow
-	float b5 = saturate(t5 + 1.0);
-	float b6 = easeInOutCubic(saturate(t6 - 3.0));
+	float b5 = easeInOutCubic(saturate(t5 * 0.2));
+	float b6 = easeInOutCubic(saturate(t6 * 0.5));
 	float b7 = easeInOutCubic(saturate(t7));
 
 	// camera target
@@ -543,7 +543,7 @@ void cameraControl(inout Camera camera) {
 	camera.target.y = clamp(-0.7 * t1, -2.8, 100.0);
 	camera.target.y = mix(camera.target.y, 1.0 + t2 * 0.3, b2);
 	camera.target.y = mix(camera.target.y, 0.0, b3);
-	camera.target.y = mix(camera.target.y, 0.0 + 0.5 * t4, b4);
+	camera.target.y = mix(camera.target.y, 0.0 + 0.6 * t4, b4);
 
 	camera.target.y = mix(camera.target.y, 0.0, b5);
 	camera.target.x = mix(camera.target.x, -0.7, b6);
@@ -556,9 +556,9 @@ void cameraControl(inout Camera camera) {
 	vec3 p3 = vec3(0.01, 4.0 + t3 * 0.2, 0.0); // zoom
 	vec3 p4 = vec3(1.5, 10.0 + t4 * 0.1, 2.0); // leave
 
-	float v = 0.3 + t5 * 0.1;
-	vec3 p5 = vec3(0.0, 0.1, 5.0 - t5 * 0.1);
-	vec3 p6 = vec3(1.7 * cos(v), 0.1, (0.5 + t6 * 0.01) * sin(v));
+	vec3 p5 = vec3(0.0, 0.1, 6.0 - t5 * 0.3);
+	float v = 0.3 + t5 * 0.07;
+	vec3 p6 = vec3(1.7 * cos(v) - 1.0, 0.1, (0.5 + t6 * 0.01) * sin(v));
 	vec3 p7 = vec3(0.0, 0.0, 0.5 + t7 * 0.1);
 
 	camera.eye = mix(p0,         p1, b1);
@@ -641,7 +641,7 @@ void main(void) {
 			var stats;
 
 			var clock = new THREE.Clock();
-			var offsetTime = 15.0;
+			var offsetTime = 30.0;
 
 			var config = {
 				saveImage: function() {
