--- a/raymarching_tdf2017.html
+++ b/raymarching_tdf2017.html
@@ -119,7 +119,7 @@ struct Intersection {
 
 	//int material;
 	vec3 color;
-	float reflection;
+	float metalness;
 };
 
 //#define METAL_MATERIAL   0
@@ -388,11 +388,11 @@ void setMaterialAndUv(inout Intersection intersection, vec3 p) {
 	float d1 = dUfo(p);
 	float d2 = dMeta(p);
 	float rate = calcRate(abs(d1), abs(d2));
-	intersection.reflection = rate;
+	intersection.metalness = rate;
 
 	float t = lTime - META_SCENE_END_TIME;
-	intersection.reflection = mix(intersection.reflection, 0.8, saturate(t * 0.1));
-	intersection.reflection = mix(intersection.reflection, 2.0, gauss((t - 13.0) * 3.0));
+	intersection.metalness = mix(intersection.metalness, 1.0, saturate(t * 0.05));
+	intersection.metalness = mix(intersection.metalness, 2.0, gauss((t - 13.0) * 3.0));
 
 	//if ( false && lTime <= META_SCENE_END_TIME ) {
 	//	intersection.material = MIRROR_MATERIAL;
@@ -500,8 +500,8 @@ void calcRadiance(inout Intersection intersection, inout Ray ray, int bounce) {
 		vec3 metalBase = hsv2rgb(vec3(0.1 * intersection.count, 0.3 * sin(lTime), v));
 		vec3 metal = metalBase * diffuse * ao * shadow + 0.1 * specular;
 
-		intersection.color = mix(flesh, metal, intersection.reflection);
-		intersection.normal = mix(fleshNormal, intersection.normal, intersection.reflection);
+		intersection.color = mix(flesh, metal, intersection.metalness);
+		intersection.normal = mix(fleshNormal, intersection.normal, intersection.metalness);
 
 		// fog
 		intersection.color = mix(intersection.color, 0.8 * vec3(0.7, 0.75, 0.8), min(1.0, pow(0.02 * intersection.distance, 2.0)));
@@ -617,7 +617,7 @@ void main(void) {
 		color += reflection * intersection.color;
 		if (!intersection.hit /* || intersection.material != METAL_MATERIAL*/) break;
 
-		reflection *= intersection.reflection;
+		reflection *= (intersection.metalness * 0.7);
 		ray.origin = intersection.position + intersection.normal * OFFSET;
 		ray.direction = normalize(reflect(ray.direction, intersection.normal));
 	}
