Update License in HTML

--- a/raymarching_tdf2017.html
+++ b/raymarching_tdf2017.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <!--
-Copyright (c) 2017 gam0022
-Released under the MIT license
-http://opensource.org/licenses/mit-license.php
+// Title: Fusioned Bismuth (TokyoDemoFest GLSL Graphics Compo 3rd place)
+// Copyright (c) 2017 gam0022
+// Used baldand's Snow post effect. super thanks!
+// License: Attribution-NonCommercial-ShareAlike (http://creativecommons.org/licenses/by-nc-sa/3.0/deed.en_US)
 -->
 <html lang="en">
 	<head>
