--- a/raymarching_tdf2017.html
+++ b/raymarching_tdf2017.html
@@ -2,7 +2,6 @@
 <!--
 // Title: Fusioned Bismuth (TokyoDemoFest GLSL Graphics Compo 3rd place)
 // Copyright (c) 2017 gam0022
-// Used baldand's Snow post effect. super thanks!
 // License: Attribution-NonCommercial-ShareAlike (http://creativecommons.org/licenses/by-nc-sa/3.0/deed.en_US)
 -->
 <html lang="en">
@@ -50,8 +49,12 @@
 		<script id="fragment_shader" type="x-shader/x-fragment">
 // Title: Fusioned Bismuth (TokyoDemoFest GLSL Graphics Compo 3rd place)
 // Copyright (c) 2017 gam0022
-// Used baldand's Snow post effect. super thanks!
 // License: Attribution-NonCommercial-ShareAlike (http://creativecommons.org/licenses/by-nc-sa/3.0/deed.en_US)
+//
+// Thanks
+// - DE used folding by gaz (https://www.shadertoy.com/view/Mlf3Wj)
+// - Just snow by baldand (https://www.shadertoy.com/view/ldsGDn)
+// - Sky and Ground by morgan3d (https://www.shadertoy.com/view/4sKGWt)
 
 precision highp float;
 
@@ -148,18 +151,7 @@ float noise(vec2 x) {
 	return mix(a, b, u.x) + (c - a) * u.y * (1.0 - u.x) + (d - b) * u.x * u.y;
 }
 
-
-#define HASHSCALE1 .1031
-#define HASHSCALE3 vec3(.1031, .1030, .0973)
-#define HASHSCALE4 vec4(1031, .1030, .0973, .1099)
-
-//  1 out, 3 in...
-float hash13(vec3 p3) {
-	p3  = fract(p3 * HASHSCALE1);
-    p3 += dot(p3, p3.yzx + 19.19);
-    return fract((p3.x + p3.y) * p3.z);
-}
-
+// https://www.shadertoy.com/view/4sKGWt
 float fbm(vec2 p) {
 	const mat2 m2 = mat2(0.8, -0.6, 0.6, 0.8);
 
